--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    background-image: url("./images/bg-header-desktop.png");
+    background-repeat: no-repeat;
     font-size: 18px;
     font-family: 'Bai Jamjuree', sans-serif;
     text-align: center;
@@ -14,6 +16,9 @@ p {
 
 .button {
     color: white;
+    padding: 1em 2em;
+    border: none;
+    border-radius: 1.5em;
 }
 
 .button--download-ios {
@@ -23,4 +28,12 @@ p {
 
 .button--download-mac {
     background-color: hsl(233, 100%, 69%);
+}
+
+.image-devices {
+    margin: 2em;
+}
+
+#main-logo {
+    margin: 3em;
 }
