--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body {
-    background-image: url("./images/bg-header-desktop.png");
-    background-repeat: no-repeat;
-    font-size: 18px;
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
     font-family: 'Bai Jamjuree', sans-serif;
     text-align: center;
+}
+
+main{
+	width: 1440px;
+	margin: 0 auto;
+	background-image: url("./images/bg-header-desktop.png");
+	background-repeat: no-repeat;
+}
+
+.section--main-width{
+	padding: 4em 14em;
 }
 
 h1, h2, h3 {
